DNN-10294: fixed long page name overflow issue in page picker

--- a/InputGroup/src/style.less
+++ b/InputGroup/src/style.less
@@ -1,6 +1,6 @@
 .dnn-ui-common-input-group {
         position: relative;
-        display: table;
+        display: block;
         border-collapse: separate;
         width: 100%;
 
